--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,33 @@
+/* colors
+BEAR 1
+green - #31493C
+beige - #D8A976
+wine - #805959
+blue - #8CC2CF
+purp - AB89A0 
+
+BEAR 2
+maroon - #723D46
+coral - #BD605C
+yellow - #FADC89
+pink - #EDA4BD
+cream - #EED5C2
+*/
+
 * {
     box-sizing: border-box;
 }
 
 body {
-    background-color: #333;
-    color: rgb(235, 235, 235);
+    background-color: #D8A976;
+    color: rgb(61, 54, 48);
     transition: all 2s;
+    font-family: 'Hepta Slab', serif;
+    font-weight: 200;
 }
 
 body.switch {
-    background-color: rgb(235, 235, 235);
-    color: #333;
+    background-color: #EED5C2;
 }
 
 #container {
@@ -24,25 +41,27 @@ body.switch {
 }
 
 header {
-    margin: 0 auto 2em auto;
+    display:flex;
+    flex-direction: row;
+    /* margin: 0 auto 2em auto; */
+}
+
+h2 {
+    font-weight: 200;
 }
 
 #banner {
     position: relative;
     display: flex;
-    width: 1100px;
+    width: 800px;
     height: 250px;
     margin: auto;
-    background-color: rgb(235, 235, 235);
-    color: #333;
     overflow: hidden;
     display: grid;
 	place-items: center;
 }
 
 #banner.switch {
-    background-color: #333;
-    color: rgb(235, 235, 235);
     transition: all 2s;
 }
 
@@ -54,63 +73,66 @@ main {
 
 main section {
     width: 25%;
-    border: 1px rgb(235, 235, 235) dashed;
-    margin: 0 .25em;
-    padding: 1em;
+    border: 10px solid transparent;
+    border-image: url(images/border1.png) 30% repeat;
+    margin: 0 1.5em;
+    padding: 1.5em;
+    padding-top:1em
 }
 
 a {
     text-decoration: none;
 }
 
-ol,
-ul {
+ol, ul {
     list-style-type: none;
     margin-left: 0;
     padding-left: 0;
-}
-
-section li {
-    padding-left: 1.2em;
 }
 
 section a {
     line-height: 1.1em;
     display: inline-block;
     padding: .5em;
-    color: orange;
+    color: black;
 }
 
 section a:hover {
-    background-color: orange;
-    color: #333;
+    background-color: #805959;
+    border-radius: 10px;
+    color: #fff2e4;
 }
 
-section.switch a {
-    color: #333;
+section.switch {
+    border: 10px solid transparent;
+    border-image: url(images/border2.png) 30% repeat;
 }
 
 section.switch a:hover {
-    background-color: #333;
-    color: rgb(235, 235, 235);
+    background-color: #BD605C;
+    color: #fff2e4;
+}
+
+h3 {
+    text-align:center;
+    font-family: 'Hepta Slab', serif;
 }
 
 button {
     position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 12px;
-    background-color: orange;
-    color: #333;
-    border: 1px solid transparent;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+    transition-duration: 1s;
 }
 
 button:hover {
-    background-color: coral;
     cursor: pointer;
+    transform: scale(1.3);
 }
 
-button.switch {
+/* button.switch {
     background-color: rgb(235, 235, 235);
     border-color: #333;
 }
@@ -118,4 +140,4 @@ button.switch {
 button.switch:hover {
     background-color: #333;
     color: rgb(235, 235, 235)
-}
+} */
