--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ green - #31493C
 beige - #D8A976
 wine - #805959
 blue - #8CC2CF
-purp - AB89A0 
+purp - #AB89A0 
 
 BEAR 2
 maroon - #723D46
@@ -43,7 +43,10 @@ body.switch {
 header {
     display:flex;
     flex-direction: row;
-    /* margin: 0 auto 2em auto; */
+    justify-content: space-evenly;
+    align-items: center;
+    height:fit-content;
+    padding-left:0;
 }
 
 h2 {
@@ -51,18 +54,12 @@ h2 {
 }
 
 #banner {
-    position: relative;
-    display: flex;
-    width: 800px;
-    height: 250px;
-    margin: auto;
-    overflow: hidden;
-    display: grid;
-	place-items: center;
+    justify-content: center;
+    padding-bottom:20px;
 }
 
 #banner.switch {
-    transition: all 2s;
+    transition: all 3s;
 }
 
 main {
@@ -131,13 +128,3 @@ button:hover {
     cursor: pointer;
     transform: scale(1.3);
 }
-
-/* button.switch {
-    background-color: rgb(235, 235, 235);
-    border-color: #333;
-}
-
-button.switch:hover {
-    background-color: #333;
-    color: rgb(235, 235, 235)
-} */
