--- a/capstone/research/styles.css
+++ b/capstone/research/styles.css
@@ -45,5 +45,9 @@ ol {
 #interviewees {
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
+    justify-content:left;
+}
+
+#intervieweesLisset {
+    margin-left:150px;
 }
