--- a/studio3/styles.css
+++ b/studio3/styles.css
@@ -8,8 +8,47 @@ green: #9fd356
 typeface
 font-family: 'Pangolin', cursive; */
 body {
+    background-color: #c8f7f9;
     font-family: 'Pangolin', cursive;
     font-size: 36px;
     display: flex;
     flex-direction: row;
+}
+
+button {
+    width: 50px;
+    height: 50px;
+    padding: 20px;
+}
+
+#red {
+    background-color: red;
+}
+
+#orange {
+    background-color: orange;
+}
+
+#yellow {
+    background-color: yellow;
+}
+
+#green {
+    background-color: green;
+}
+
+#blue {
+    background-color: blue;
+}
+
+#purple {
+    background-color: purple;
+}
+
+#pink {
+    background-color: pink;
+}
+
+#black {
+    background-color: black;
 }
