--- a/studio3/styles.css
+++ b/studio3/styles.css
@@ -10,15 +10,41 @@ font-family: 'Pangolin', cursive; */
 body {
     background-color: #c8f7f9;
     font-family: 'Pangolin', cursive;
-    font-size: 36px;
-    display: flex;
-    flex-direction: row;
+    font-size: 28px;
+    margin: auto;
+    text-align:center;
+}
+
+h1 {
+    text-shadow: -4px 0 white, 0 4px white, 4px 0 white, 0 -4px white, 4px 4px 6px black;
+}
+
+h2, p {
+    margin:0%;
+    text-align: left;
+}
+
+p {
+    padding-bottom: 50px;
+}
+
+section {
+    width: 800px;
+    margin:auto;
+    padding-bottom: 40px;
 }
 
 button {
-    width: 50px;
-    height: 50px;
-    padding: 20px;
+    width: 60px;
+    height: 60px;
+    border-radius: 55px;
+    border-width: 4px;
+}
+
+#paintbuttons {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
 }
 
 #red {
@@ -51,4 +77,14 @@ button {
 
 #black {
     background-color: black;
+}
+
+#mySketch {
+    width: 1366px;
+    margin: auto;
+}
+
+#delete {
+    border: none;
+    background-color: transparent;
 }
