--- a/capstone/final/styles.css
+++ b/capstone/final/styles.css
@@ -8,12 +8,14 @@ green: #9fd356
 typeface
 font-family: 'Pangolin', cursive; */
 body {
+    background-image:url('images/background.png');
+    background-size: cover;
     background-color: #c8f7f9;
     font-family: 'Pangolin', cursive;
     text-align: center;
 }
 
-#heading {
+#headinghome {
     display: flex;
     flex-direction: row;
     align-items:center;
@@ -23,27 +25,47 @@ body {
     padding: 30px;
 }
 
-.homebutton {
-    position:absolute;
-    top:80px;
-    left:30px;
-    transition-duration: 1s;
-}
-
-.homebutton:hover {
-    transform: scale(1.3);
-}
-
 h1 {
     margin:0%;
 }
 
-#davis {
+.davishome {
+    display:block;
     font-size: 42px;
 }
 
-.flower {
+.flowerhome {
     padding: 40px;
+}
+
+.heading{
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    justify-content: center;
+    font-size: 18px;
+    text-shadow: -4px 0 white, 0 4px white, 4px 0 white, 0 -4px white, 4px 4px 6px black;
+    padding: 30px;
+}
+
+.davis {
+    display:block;
+    font-size: 28px;
+}
+
+.flower {
+    padding: 20px;
+}
+
+.homebutton {
+    position:absolute;
+    top:20px;
+    left:20px;
+    transition-duration: 0.2s;
+}
+
+.homebutton:hover {
+    transform: scale(1.1);
 }
 
 img {
@@ -61,15 +83,33 @@ button:hover {
 }
 
 .showing {
-    visibility: visible;
-    opacity:1;
+    display:block;
 }
 .hidden {
-    visibility:hidden;
-    opacity:0;
+    display:none;
 }
 
 section {
-    transition-duration: .7s;
-    transition-timing-function: ease;
+    position: fixed;
+    top:0;
+    left:0;
+    width:100vw;
+    height:100vh;
+    transform: all 4s ease;
+}
+
+article {
+    position: absolute;
+    top:150px;
+    left:60%;
+    font-size: 30px;
+    width: 400px;
+    background-color:white;
+    border: 3px solid black;
+    border-radius:50px;
+    padding:40px;
+}
+
+p {
+    margin:0%;
 }
