--- a/studio3/styles.css
+++ b/studio3/styles.css
@@ -8,37 +8,44 @@ green: #9fd356
 typeface
 font-family: 'Pangolin', cursive; */
 body {
+    display: flex;
+    flex-direction: row;
     background-color: #c8f7f9;
     font-family: 'Pangolin', cursive;
-    font-size: 28px;
+    font-size: 22px;
     margin: auto;
+    padding-top: 20px;
     text-align:center;
 }
 
 h1 {
     text-shadow: -4px 0 white, 0 4px white, 4px 0 white, 0 -4px white, 4px 4px 6px black;
+    font-size:52px;
+    padding-bottom: 30px;
 }
 
 h2, p {
     margin:0%;
     text-align: left;
+    line-height: 1.3;
 }
 
 p {
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 }
 
 section {
-    width: 800px;
-    margin:auto;
-    padding-bottom: 40px;
+    width: 30%;
+    padding: 40px;
+    align-items: center;
 }
 
 button {
-    width: 60px;
-    height: 60px;
-    border-radius: 55px;
+    width: 40px;
+    height: 40px;
+    border-radius: 30px;
     border-width: 4px;
+    margin: 2px;
 }
 
 #paintbuttons {
@@ -79,12 +86,6 @@ button {
     background-color: black;
 }
 
-#mySketch {
-    width: 1366px;
-    margin: auto;
-}
-
-#delete {
-    border: none;
-    background-color: transparent;
+div {
+    margin: 30px;
 }
