--- a/capstone/development/usability/styles.css
+++ b/capstone/development/usability/styles.css
@@ -58,10 +58,16 @@ h1 {
     padding: 20px;
 }
 
-.homebutton {
+.homeicon {
     position:absolute;
     top:20px;
     left:20px;
+    /* background-color: transparent;
+    border:none; */
+}
+
+#cow {
+    border: 2px solid red;
 }
 
 img {
@@ -85,6 +91,11 @@ button:hover {
     display:none;
 }
 
+#page1layout {
+    display: flex;
+    flex-direction: row;
+}
+
 section {
     position: fixed;
     top:0;
@@ -97,12 +108,12 @@ section {
 article {
     position: absolute;
     top:150px;
-    left:60%;
+    left:50%;
     font-size: 30px;
-    width: 400px;
+    width: 500px;
     background-color:white;
     border: 3px solid black;
-    border-radius:50px;
+    border-radius:50px 50px 50px 0px;
     padding:40px;
 }
 
