--- a/capstone/development/usability/styles.css
+++ b/capstone/development/usability/styles.css
@@ -8,7 +8,7 @@ green: #9fd356
 typeface
 font-family: 'Pangolin', cursive; */
 body {
-    background-image:url('images/background.png');
+    background-image:url('images/background.svg');
     background-size: cover;
     background-color: #c8f7f9;
     font-family: 'Pangolin', cursive;
@@ -95,6 +95,30 @@ button:hover {
 #page1layout {
     display: flex;
     flex-direction: row;
+}
+
+#page2layout {
+    display: flex;
+    flex-direction: row;
+}
+
+#page2layout article {
+    position: absolute;
+    width: 30%;
+    top:150px;
+    left:70%;
+}
+
+#next {
+    position:absolute;
+    bottom:50px;
+    right:70px;
+    background-color: #ffdc2d;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding:5px;
+    width: 100px;
+    font-size: 20px;
 }
 
 section {
