--- a/capstone/development/usability/styles.css
+++ b/capstone/development/usability/styles.css
@@ -58,7 +58,7 @@ h1 {
     padding: 20px;
 }
 
-.homeicon {
+.homeicon, .back {
     position:absolute;
     top:20px;
     left:20px;
@@ -92,19 +92,14 @@ button:hover {
     display:none;
 }
 
-#page1layout {
-    display: flex;
-    flex-direction: row;
-}
-
-#page2layout {
+#page1layout, #page2layout {
     display: flex;
     flex-direction: row;
 }
 
 #page2layout article {
     position: absolute;
-    width: 30%;
+    width: 20%;
     top:150px;
     left:70%;
 }
