--- a/capstone/styles.css
+++ b/capstone/styles.css
@@ -96,7 +96,7 @@ button:hover {
     padding-top: 0px;
 }
 
-.page2layout #cowpage2, .page2layout #turtlepage2 {
+.page2layout #cowimg2, .page2layout #turtleimg2 {
     top:30%;
 }
 
